Added some more models in notebook

--- a/src/Hackathon.ipynb
+++ b/src/Hackathon.ipynb
@@ -51842,6 +51842,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 120,
    "metadata": {},
    "outputs": [],
@@ -51920,6 +51927,226 @@
    "outputs": [],
    "source": [
     "df_2.to_csv(\"Result1.csv\",index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xgboost as xgb\n",
+    "model = xgb.XGBRegressor(colsample_bytree=0.4603, gamma=0.0468,\n",
+    "                             learning_rate=0.005, max_depth=9,\n",
+    "                             min_child_weight=1.7817, n_estimators=2200,\n",
+    "                             reg_alpha=0.4640, reg_lambda=0.8571,\n",
+    "                             subsample=0.5213, silent=1,\n",
+    "                             random_state =7, nthread = -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/saidineshreddymaluchuru/anaconda3/lib/python3.7/site-packages/xgboost/core.py:587: FutureWarning: Series.base is deprecated and will be removed in a future version\n",
+      "  if getattr(data, 'base', None) is not None and \\\n",
+      "/Users/saidineshreddymaluchuru/anaconda3/lib/python3.7/site-packages/xgboost/core.py:588: FutureWarning: Series.base is deprecated and will be removed in a future version\n",
+      "  data.base is not None and isinstance(data, np.ndarray) \\\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "       colsample_bynode=1, colsample_bytree=0.4603, gamma=0.0468,\n",
+       "       importance_type='gain', learning_rate=0.005, max_delta_step=0,\n",
+       "       max_depth=9, min_child_weight=1.7817, missing=None,\n",
+       "       n_estimators=2200, n_jobs=1, nthread=-1, objective='reg:linear',\n",
+       "       random_state=7, reg_alpha=0.464, reg_lambda=0.8571,\n",
+       "       scale_pos_weight=1, seed=None, silent=1, subsample=0.5213,\n",
+       "       verbosity=1)"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(df_train, df_train_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_pred_class_linear1 = model.predict(df_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_result3 = pd.DataFrame(new_pred_class_linear1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1 = df_result3.round()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1.to_csv(\"Result4.csv\",index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor,  GradientBoostingRegressor\n",
+    "\n",
+    "model = GradientBoostingRegressor(n_estimators=6000, learning_rate=0.01,\n",
+    "                                   max_depth=9, max_features='sqrt',\n",
+    "                                   min_samples_leaf=15, min_samples_split=10,\n",
+    "                                  loss='huber', random_state =5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GradientBoostingRegressor(alpha=0.9, criterion='friedman_mse', init=None,\n",
+       "             learning_rate=0.01, loss='huber', max_depth=9,\n",
+       "             max_features='sqrt', max_leaf_nodes=None,\n",
+       "             min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "             min_samples_leaf=15, min_samples_split=10,\n",
+       "             min_weight_fraction_leaf=0.0, n_estimators=6000,\n",
+       "             n_iter_no_change=None, presort='auto', random_state=5,\n",
+       "             subsample=1.0, tol=0.0001, validation_fraction=0.1, verbose=0,\n",
+       "             warm_start=False)"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(df_train, df_train_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_pred_class_linear1 = model.predict(df_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_result3 = pd.DataFrame(new_pred_class_linear1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1 = df_result3.round()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1.to_csv(\"Result5.csv\",index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf = RandomForestRegressor(n_estimators = 6000, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf.fit(df_train, df_train_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_pred_class_linear1 = rf.predict(df_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_result3 = pd.DataFrame(new_pred_class_linear1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1 = df_result3.round()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1.to_csv(\"Result6.csv\",index = False)"
    ]
   },
   {
