added model with more estimators

--- a/src/Hackathon.ipynb
+++ b/src/Hackathon.ipynb
@@ -52106,16 +52106,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "           max_features='auto', max_leaf_nodes=None,\n",
+       "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "           min_samples_leaf=1, min_samples_split=2,\n",
+       "           min_weight_fraction_leaf=0.0, n_estimators=6000, n_jobs=None,\n",
+       "           oob_score=False, random_state=42, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rf.fit(df_train, df_train_output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52124,7 +52140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52133,7 +52149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52142,7 +52158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
